made initial changes

--- a/fcc-test-suite-template-master/index.html
+++ b/fcc-test-suite-template-master/index.html
@@ -8,21 +8,39 @@
   </head>
 
   <body>
-    <p>Hello World. We are software developers</p>
+    <nav id="navbar">
+      <ul>
+        <li><a href="#">Home</a></li>
+        <li><a href="#projects">Projects</a></li>
+      </ul>
+    </nav>
+
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <section id="welcome-section">
+      <h1>Nia's Portfolio</h1>
+    </section>
+
+    <section id="projects">
+      <h2 class="project-tile"></h2>
+      <img src="images/microverse.png" alt="Girl in a jacket" width="200" height="200">
+
+      <a href="https://www.microverse.org/">Microverse projects!</a>
+    </section>
+
+    <section id="profile-link">
+      <ul>
+        <li><a href="https://github.com/npydi">GitHub</a></li>
+        <li><a href="https://www.facebook.com/">Facebook</a></li>
+      </ul>
+    </section>
+
+
+
+
+
+
+
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
-
-    <!--
-
-    Hello Camper!
-
-    For now, the test suite only works in Chrome!
-    Please read the README below in the JS Editor before beginning.
-    Feel free to delete this message once you have read it.
-    Good luck and Happy Coding!
-
-    - The freeCodeCamp Team
-
-    -->
     <script src="js/index.js"></script>
   </body>
 
