--- a/fcc-test-suite-template-master/index.html
+++ b/fcc-test-suite-template-master/index.html
@@ -5,9 +5,14 @@
     <meta charset="UTF-8">
     <title>Fork Me! FCC: Test Suite Template</title>
     <link rel="stylesheet" href="css/style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+      integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
+      crossorigin="anonymous"></script>
   </head>
 
-  <body>
+  <body id="container">
     <nav id="navbar">
       <ul>
         <li><a href="#">Home</a></li>
@@ -28,10 +33,16 @@
     </section>
 
     <section id="profile-link">
-      <ul>
-        <li><a href="https://github.com/npydi">GitHub</a></li>
-        <li><a href="https://www.facebook.com/">Facebook</a></li>
-      </ul>
+      <div target="_blank">
+        <h2>Let's work together...</h2>
+        <p>How do you take your coffee?</p>
+      </div>
+
+      <!-- <a href="https://facebook.com/freecodecamp" target="_blank" class="btn contact-details"><i
+          class="fab fa-facebook-square"></i> Facebook</a> -->
+
+      <a href="https://github.com/npydi" target="_blank">GitHub</a></li>
+      <a href="#">Blank</a>
     </section>
 
 
