modifying profile-link

--- a/fcc-test-suite-template-master/index.html
+++ b/fcc-test-suite-template-master/index.html
@@ -32,7 +32,7 @@
       <a href="https://www.microverse.org/">Microverse projects!</a>
     </section>
 
-    <section id="profile-link">
+    <section >
       <div target="_blank">
         <h2>Let's work together...</h2>
         <p>How do you take your coffee?</p>
@@ -41,7 +41,7 @@
       <!-- <a href="https://facebook.com/freecodecamp" target="_blank" class="btn contact-details"><i
           class="fab fa-facebook-square"></i> Facebook</a> -->
 
-      <a href="https://github.com/npydi" target="_blank">GitHub</a></li>
+      <a id="profile-link" href="https://github.com/npydi" target="_blank">GitHub</a></li>
       <a href="#">Blank</a>
     </section>
 
