--- a/index.html
+++ b/index.html
@@ -32,24 +32,18 @@
       <a href="https://www.microverse.org/">Microverse projects!</a>
     </section>
 
-    <section id="profile-link">
+    <section>
       <div target="_blank">
         <h2>Let's work together...</h2>
         <p>How do you take your coffee?</p>
       </div>
 
-      <!-- <a href="https://facebook.com/freecodecamp" target="_blank" class="btn contact-details"><i
-          class="fab fa-facebook-square"></i> Facebook</a> -->
+      <!-- <a href="https://www.w3schools.com" target="_blank">Visit W3Schools</a> -->
 
-      <a href="https://github.com/npydi" target="_blank">GitHub</a></li>
+
+      <a id="profile-link" href="https://github.com/npydi" target="_blank">GitHub</a></li>
       <a href="#">Blank</a>
     </section>
-
-
-
-
-
-
 
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
     <script src="js/index.js"></script>
